crates/search/tests/settings/snapshots/vectors.rs/bad_parameters/userProvided-revision-sending_result.snap
---
source: crates/indexsearch/tests/settings/vectors.rs
---
{
  "message": "`.embedders.test`: Field `revision` unavailable for source `userProvided`.\n  - note: `revision` is available for sources: `huggingFace`\n  - note: available fields for source `userProvided`: `source`, `dimensions`, `distribution`, `binaryQuantized`",
  "code": "invalid_settings_embedders",
  "type": "invalid_request",
  "link": "https://docs.hanzo.ai/docs/errors#invalid_settings_embedders"
}
